fixed issue where title was covering button

--- a/shopfyinternchallenge/src/images/_displayImages.scss
+++ b/shopfyinternchallenge/src/images/_displayImages.scss
@@ -173,3 +173,9 @@ p.description {
 .subTitle {
     margin-bottom: 4rem;
 }
+
+@media (max-width: 518px) {
+    .Polaris-Heading {
+        font-size: 18px !important;
+    }
+}
